# rez-recipes

./: .pre-commit-config.yaml  LICENSE  README.md
PySide/6+._maya/: package.py
PySide2/_maya/: package.py
PySide2/_native/: package.py
Qt/5._maya/: CMakeLists.txt  package.py
Qt/5._native/: package.py
Qt/_maya/: CMakeLists.txt  package.py
SHAPES/_local/: CMakeLists.txt  package.py
build_common/: maya_packaging.py
mGear/4._latest/: CMakeLists.txt  package.py
mGear/_latest/: CMakeLists.txt  package.py
maya/_native/: package.py
ngSkinTools/2._latest/: CMakeLists.txt  package.py
pymel/_latest/: CMakeLists.txt  package.py
python/_maya/: package.py
python/_native/: package.py
unreal_engine/_native/: package.py
